Circle and quadrants not responsive, fix everything

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,12 +31,16 @@ body {
     background: gold;
     border-bottom-left-radius: 80%;
     border: 5px solid black;
+    top: 50%;
+    left: 50%;
 }
 
 .right-bottom-quadrant {
     background: green;
     border-bottom-right-radius: 80%;
     border: 5px solid black;
+    top: 50%;
+    left: 50%;
 }
 
 .quadrant {
@@ -50,4 +54,16 @@ body {
 #game {
     text-align: center;
     margin-top: 10%;
+}
+
+/* Position inner circle to the center of the 4 quadrants */
+
+#circle {
+    background-color: lightslategray;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    position: absolute;
+    left: 42.5%;
+    top:38%;
 }
